syntax = "proto3";

option java_multiple_files = true;

option java_package = "com.businesstier.grpc.protobuf";

service RetrieveInfo{
  rpc retrieveBill(RequestText) returns(ResponseText);
}

service CreateClientConnection{
  rpc createClient(RequestText) returns(ResponseText);
}

message RequestText{
  string input_text = 1;
}

message ResponseText{
  string output_text = 1;
}